--- a/.parcelrc
+++ b/.parcelrc
@@ -2,5 +2,6 @@
   "extends": "@parcel/config-default",
   "transformers": {
     "*.{ts,tsx}": ["@parcel/transformer-typescript-tsc"]
-  }
+  },
+  "reporters":  ["...", "parcel-reporter-static-files-copy"]
 }
