--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/qs": "^6.9.7",
     "@types/react-router-redux": "^5.0.21",
     "@types/styletron-react": "^5.0.3",
+    "chrome-launcher": "^0.15.1",
+    "chrome-remote-interface": "^0.31.3",
     "parcel": "^2.7.0",
     "parcel-reporter-static-files-copy": "^1.4.0",
     "process": "^0.11.10",
