--- a/.github/workflows/generate_pdf.yaml
+++ b/.github/workflows/generate_pdf.yaml
@@ -13,6 +13,9 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install dependencies
+        run: yarn install
+
+      - name: Install dependencies
         run: node generate-resume-pdf.js
 
       - name: Deploy 🚀
