--- a/.github/workflows/generate_pdf.yaml
+++ b/.github/workflows/generate_pdf.yaml
@@ -12,13 +12,18 @@ jobs:
       - name: Check out
         uses: actions/checkout@v1
 
+      - name: Install Chrome
+        uses: browser-actions/setup-chrome@latest
+      
+      - run: chrome --version
+
       - name: Install dependencies
         run: yarn install
 
-      - name: Install dependencies
+      - name: Generate PDF
         run: node generate-resume-pdf.js
 
-      - name: Deploy 🚀
+      - name: Release 🚀
         uses: ncipollo/release-action@v1
         with:
           artifacts: resume.pdf
