--- a/.parcelrc
+++ b/.parcelrc
@@ -1,5 +1,6 @@
 {
   "extends": "@parcel/config-default",
+  "resolvers": ["...", "parcel-resolver-git"],
   "transformers": {
     "*.{ts,tsx}": ["@parcel/transformer-typescript-tsc"]
   },
