--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "parcel": "^2.7.0",
     "parcel-reporter-static-files-copy": "^1.4.0",
     "process": "^0.11.10",
-    "typescript": ">=3.0.0"
+    "typescript": ">=3.0.0",
+    "parcel-resolver-git": "link:./parcel/plugin/parcel-resolver-git"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
