--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "chrome-remote-interface": "^0.31.3",
     "parcel": "^2.7.0",
     "parcel-reporter-static-files-copy": "^1.4.0",
+    "parcel-resolver-git": "link:./parcel/plugin/parcel-resolver-git",
     "process": "^0.11.10",
-    "typescript": ">=3.0.0",
-    "parcel-resolver-git": "link:./parcel/plugin/parcel-resolver-git"
+    "typescript": ">=3.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
@@ -40,6 +40,7 @@
     "react-redux": "^7.1.0",
     "react-router": "^5.0.0",
     "redux": "^4.2.0",
+    "rehype-raw": "^6.1.1",
     "styletron": "^3.0.4",
     "styletron-engine-atomic": "^1.5.0",
     "styletron-react": "^6.1.0",
